<resources>
    <string name="app_name">MaN: Memo and Notebook</string>
    <string name="mobile_login_text">登录/注册</string>
    <string name="mobile_edit_text">请输入手机号</string>
    <string name="next_button_text">下一步</string>
    <string name="return_button_text">返回</string>
    <string name="register_text">注册</string>
    <string name="username_edit_text">请输入用户名</string>
    <string name="password_edit_text">请输入密码，密码至少包含8位字符</string>
    <string name="password_check_edit_text">请再次输入相同的密码</string>
    <string name="finish_button_text">完成</string>
    <string name="phone_number_edit_text">请输入手机号（可选）</string>
    <string name="email_edit_text">请输入邮箱（可选）</string>
    <string name="invalid_username_text">用户名不能为空</string>
    <string name="invalid_password_text">密码至少包含8位字符</string>
    <string name="password_not_the_same_text">两次输入的密码不相同</string>
    <string name="invalid_phone_number_text">请输入合法手机号</string>
    <string name="invalid_email_text">请输入合法邮箱</string>
    <string name="navigation_note_title">笔记</string>
    <string name="navigation_memo_title">备忘录</string>
    <string name="navigation_info_title">我</string>
    <string name="info_configuration_text">修改</string>
    <string name="info_configuration_success_text">修改成功</string>
    <string name="info_configuration_error_text">发生错误</string>
    <string name="logout_button_text">登出</string>
    <string name="dialog_text">添加笔记类别</string>
    <string name="dialog_input_placeholder">请输入</string>
    <string name="dialog_cancel_btn_text">取消</string>
    <string name="dialog_ok_btn_text">确定</string>
</resources>