<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请输入密码"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_text"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:textColor="#bbbec5"
        android:textCursorDrawable="@drawable/cursor_color"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <TextView
        android:id="@+id/login_password_error_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:text="@string/invalid_password_text"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit"
        android:visibility="gone"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/next_button"
        android:stateListAnimator="@null"
        android:text="登录"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit" />

    <Button
        android:id="@+id/login_return_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/return_button"
        android:stateListAnimator="@null"
        android:text="@string/return_button_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>