<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/yellow"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/lakers_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_middle"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/dialog_top" >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <EditText
        android:id="@+id/check_input"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_placeholder"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_placeholder"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/check_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialog_error"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_input"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/recheck_input"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_placeholder"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recheck_error"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recheck_input"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/recheck_input"
        app:layout_constraintEnd_toEndOf="parent" >

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel_btn_text"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_ok_btn_text"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>